--- a/.runpod/Dockerfile
+++ b/.runpod/Dockerfile
@@ -1,9 +1,13 @@
-FROM runpod/base:0.4.0-cuda12.1.1
+# Use a modern Runpod PyTorch base image
+FROM runpod/pytorch:1.0.2-cu1281-torch271-ubuntu2204
 
 # Install dependencies
-RUN pip install --no-cache-dir torch diffusers transformers accelerate safetensors pillow runpod
+RUN pip install --no-cache-dir diffusers transformers accelerate safetensors pillow runpod
 
-# Copy code
+# (Optional) Pre-download the model to reduce cold start latency
+RUN python -c "from diffusers import DiffusionPipeline; DiffusionPipeline.from_pretrained('Qwen/Qwen-Image-Edit-2509')"
+
+# Copy handler file
 WORKDIR /app
 COPY handler.py .
 
